ASM-976: All vulerbilities fixed and compiles - 19 tests fail